attempting to fix mock data spacing

--- a/src/containers/LeftPanel/TestCase/TestCase.module.scss
+++ b/src/containers/LeftPanel/TestCase/TestCase.module.scss
@@ -20,6 +20,7 @@
 #mockHeader {
   float: right;
   padding: 2% 4%;
+  margin-bottom: 15px;
 }
 
 #mockDataHeader {
